--- a/cloudformation.template
+++ b/cloudformation.template
@@ -4,6 +4,7 @@ Mappings:
   SourceCode:
     General:
       TranscribeFnFilename: "transcribe-1727511708.zip"
+      ComprehendFnFilename: ""
 
 Resources:
   Source:
@@ -14,6 +15,13 @@ Resources:
           - Function: !GetAtt 'TranscribeFn.Arn'
             Event: 's3:ObjectCreated:*'
   Transcribed:
+    Type: 'AWS::S3::Bucket'
+    Properties:
+      NotificationConfiguration:
+        LambdaConfigurations:
+          - Function: !GetAtt 'ComprehendFn.Arn'
+            Event: 's3:ObjectCreated:*'
+  Comprehended:
     Type: 'AWS::S3::Bucket'
   Lambdas:
     Type: 'AWS::S3::Bucket'
@@ -33,6 +41,25 @@ Resources:
         Variables:
           OUTPUT_BUCKET_NAME:
             Ref: Transcribed
+        Tags:
+          - Key: project
+            Value: !Ref 'AWS::StackName'
+  ComprehendFn:
+    Type: 'AWS::Lambda::Function'
+    Properties:
+      Code:
+        S3Bucket: !Ref 'Lambdas'
+        S3Key: !FindInMap ["SourceCode", "General", "ComprehendFnFilename"]
+      FunctionName: comprehend-fn
+      Handler: comprehend.lambda_handler
+      Role: !GetAtt 'ComprehendIAMRole.Arn'
+      Runtime: python3.11
+      MemorySize: 128
+      Timeout: 60
+      Environment:
+        Variables:
+          OUTPUT_BUCKET_NAME:
+            Ref: Comprehended
         Tags:
           - Key: project
             Value: !Ref 'AWS::StackName'
@@ -62,6 +89,37 @@ Resources:
               - Effect: Allow
                 Action:
                   - 'transcribe:*'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'logs:*'
+                Resource: '*'
+  ComprehendIAMRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      Policies:
+        - PolicyName: root
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 's3:PutObject'
+                  - 's3:GetObject'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'comprehend:*'
                 Resource: '*'
               - Effect: Allow
                 Action:
