--- a/cloudformation.template
+++ b/cloudformation.template
@@ -3,33 +3,21 @@ AWSTemplateFormatVersion: 2010-09-09
 Mappings:
   SourceCode:
     General:
-      TranscribeFnFilename: "transcribe-1727534754.zip"
-      ComprehendFnFilename: "comprehend-1727534754.zip"
+      TranscribeFnFilename: "transcribe.zip"
+      ComprehendFnFilename: "comprehend.zip"
 
 Resources:
   Source:
     Type: 'AWS::S3::Bucket'
-    Properties:
-      NotificationConfiguration:
-        LambdaConfigurations:
-          - Function: !GetAtt 'TranscribeFn.Arn'
-            Event: 's3:ObjectCreated:*'
   Transcribed:
     Type: 'AWS::S3::Bucket'
-#    Properties:
-#      NotificationConfiguration:
-#        LambdaConfigurations:
-#          - Function: !GetAtt 'ComprehendFn.Arn'
-#            Event: 's3:ObjectCreated:*'
   Comprehended:
-    Type: 'AWS::S3::Bucket'
-  Lambdas:
     Type: 'AWS::S3::Bucket'
   TranscribeFn:
     Type: 'AWS::Lambda::Function'
     Properties:
       Code:
-        S3Bucket: !Ref 'Lambdas'
+        S3Bucket: 'lambdas-hackyeah'
         S3Key: !FindInMap ["SourceCode", "General", "TranscribeFnFilename"]
       FunctionName: transcribe-fn
       Handler: transcribe.lambda_handler
@@ -48,7 +36,7 @@ Resources:
     Type: 'AWS::Lambda::Function'
     Properties:
       Code:
-        S3Bucket: !Ref 'Lambdas'
+        S3Bucket: 'lambdas-hackyeah'
         S3Key: !FindInMap ["SourceCode", "General", "ComprehendFnFilename"]
       FunctionName: comprehend-fn
       Handler: comprehend.lambda_handler
